added media query

--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,8 @@
              <p>{{data.title}}</p>
              <p>{{data.description}}</p>
              <p class="author">Created by: {{data.username}} </p>
-             <span class="author" style="
-    margin: 0 0 0 10px;
-    font-size: small;
-">on:  {{data.created_at}}</span>
+             <span 
+>on:  {{data.created_at}}</span>
 
              <comments-component
              :id="imageid"       
